tests/tooling/fixtures/native/execution/negative/switch_conditional_case_break_path_conservative_reject.objc3
module SwitchConditionalCaseBreakPathConservativeReject;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      if (value == 0) {
        break;
      }
    case 2:
      return 42;
    default:
      return 9;
  }
}
